# ntechlab_testtask

./: .gitignore  Dockerfile  README.md  prepare.sh
server/: CMakeLists.txt  FileServerHandler.cpp  FileServerHandler.h  HTTPConnection.cpp  HTTPConnection.h  HTTPServer.cpp  HTTPServer.h  JPEGBase.cpp  JPEGBase.h  JPEGReader.cpp  JPEGReader.h  JPEGWriter.cpp  JPEGWriter.h  MuxMap.hpp  Responses.cpp  Responses.h  TcpListener.hpp  TcpListner.cpp  TcpListner.h  TcpListner.hpp  fail.h  main.cpp
www/: index.html  index.js  style.css
